A lot of tasks done

--- a/task2_word_embeddings.ipynb
+++ b/task2_word_embeddings.ipynb
@@ -321,8 +321,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-29T19:20:12.830221Z",
      "start_time": "2019-10-29T19:19:33.132062Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -582,8 +581,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-29T19:22:12.649035Z",
      "start_time": "2019-10-29T19:20:17.984118Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -675,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -689,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -724,5 +722,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
