--- a/task1_20newsgroups.ipynb
+++ b/task1_20newsgroups.ipynb
@@ -275,8 +275,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-12T12:46:22.371272Z",
      "start_time": "2019-09-12T12:44:17.322178Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -348,8 +347,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-12T12:46:31.791405Z",
      "start_time": "2019-09-12T12:46:25.107897Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -406,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -455,5 +453,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
