--- a/task3_cnn_postag.ipynb
+++ b/task3_cnn_postag.ipynb
@@ -344,8 +344,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-29T19:47:48.319470Z",
      "start_time": "2019-10-29T19:46:25.552Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -493,8 +492,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-29T19:47:48.327888Z",
      "start_time": "2019-10-29T19:46:50.737Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -772,7 +770,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -786,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -821,5 +819,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
