--- a/task4_RNN_name_generator.ipynb
+++ b/task4_RNN_name_generator.ipynb
@@ -489,9 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Более простое решение\n",
     "\n",
@@ -704,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -718,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -753,5 +751,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
